# very_latest

./: .replit  app.py  architecture.md  code_analysis.md  config.py  database.py  enhancement_plan.md  pyproject.toml  replit.nix  setup_guide.md
ai/: __init__.py  financial_agent.py  groq_client.py  rag_system.py
data/books/: indian_financial_system.txt  intelligent_investor.txt  let_stocks_do_the_work.txt  psychology_of_money.txt  rich_dad_poor_dad.txt
data/cache/: api_usage.json
data/cache/embeddings/chroma_db/: chroma.sqlite3
data_sources/: __init__.py  news_extractor.py  stock_data.py
src/analysis_tools/: dependency_chart.py  repo_analyzer.py
src/visualization/: architecture_visualizer.py  code_flow.py
static/css/: report.css
static/js/: report.js
templates/: report_template.html
utils/: __init__.py  cache_manager.py
