[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "gitpython>=3.1.44",
    "markdown>=3.7",
    "motor==3.7.0",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pymongo==4.9.0",
    "requests>=2.32.3",
    "flask-wtf>=1.2.2",
    "groq>=0.20.0",
    "langchain-groq>=0.3.1",
    "langchain>=0.3.21",
    "yfinance>=0.2.55",
    "sqlalchemy>=2.0.39",
    "psycopg2-binary>=2.9.10",
]
